One more correction. The name of the PNG on index page.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <!-- Standard Boiler Plate Above-->
 <h1>Hello! I am Killer Tofu aka Thalmor Dropout</h1>
-<img src="../odin-recipes/recipes/pics/Thalmor Dropout.png" alt="Thalmor Dropout Logo" height="310">
+<img src="../odin-recipes/recipes/pics/ThalmorDropout.png" alt="Thalmor Dropout Logo" height="310">
     <body>
 <h1>Odin recipes</h1>
 <ul>
